        Reviewed by Darin Alder.

REGRESSION (WebKit2): AppKit thinks that web views don't support DocumentAccess
        https://bugs.webkit.org/show_bug.cgi?id=58102
        <rdar://problem/9223246>

        * UIProcess/API/mac/WKView.h:
        * UIProcess/API/mac/WKView.mm:
        (-[WKView doCommandBySelector:]):
        (-[WKView insertText:replacementRange:]):
        (-[WKView validAttributesForMarkedText]):
        (-[WKView setMarkedText:selectedRange:replacementRange:]):
        (-[WKView attributedSubstringForProposedRange:actualRange:]):
        (-[WKView firstRectForCharacterRange:actualRange:]):
        Switch to NSTextInputClient, opting out of optimizations and optional features for now.



Canonical link: https://commits.webkit.org/73099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83326 268f45cc-cd09-0410-ab3c-d52691b4dbfc